--- a/public/style.css
+++ b/public/style.css
@@ -6,7 +6,7 @@ body {
 .navbar {
   background-color: #313236;
   border-radius: 2px;
-  max-width: 800px;
+/*  max-width: 800px; */
 }
 .navbar a {
   color: #aaa;
