--- a/public/style.css
+++ b/public/style.css
@@ -7,14 +7,15 @@
 	--bg: wheat ;
 	--altbg: burlywood ;
 	--navbg: darkolivegreen ;
-	--emph: #333 ;
+	--emph: tan ;
 	--bordercolor: #555 ;
 	--limish: #0e0 ;
 	--h1: #000 ;
 	--h2: #000 ;
 	--h3: #000 ;
 	--h4: #000 ;
-	--a: #000 ;
+	--a: darkolivegreen ;
+	--ahover: #0e0 ;
 	--dt: #000 ;
 }
 
