renamed reference to references

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -10,9 +10,9 @@
                 🦊Gitlab
             </li>
         </a>
-        <a href="/reference">
+        <a href="/references">
             <li>
-                🎓Reference
+                🎓References
             </li>
         </a>
         <a href="/contacts">
