feat: changed gitlab to github

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -5,9 +5,9 @@
                 🏠Home
             </li>
         </a>
-        <a href="https://gitlab.com/admbeck">
+        <a href="https://github.com/admbeck">
             <li>
-                🦊Gitlab
+                🐙Github
             </li>
         </a>
         <a href="/references">
